[package]
name = "yew_stripe"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
yew = "0.21.0"
yew-interop = { git = "https://github.com/Madoshakalaka/yew-interop.git", features = [
    'yew-stable'
] }



web-sys = { version = "0.3", features = [
    'Document',
    'DragEvent',
    'DomRect', 
    'DataTransfer',
    'Element',
    'Window',
    'Node',
    'HtmlDocument',
    'HtmlSelectElement',
    'HtmlInputElement',
    'ScrollIntoViewOptions',
    'ScrollBehavior',
    'CssStyleDeclaration',
    'TextMetrics',
    'Performance',
    'ResizeObserver',
    'ResizeObserverEntry',
    'HtmlOptionElement',
    'console',
    'BlobEvent', 
    'Navigator',
] }
wasm-bindgen-futures = "0.4.50"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
