[package]
name = "basic_checkout"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Trunk will build this to Wasm

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_json = "1.0"
yew_stripe = { path = "../../" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "Node", "EventTarget", "MouseEvent", "KeyboardEvent", "Headers", "Request", "Response", "History", "Url"] }
gloo-net = "0.6.0"
